--- a/lib/ctrl-color/style.css
+++ b/lib/ctrl-color/style.css
@@ -2,14 +2,10 @@
 
 :host {
     --color: #000000;
-    --size: calc(var(--i-l, 120px) / 2);
-    --size-s: var(--i-s, 1.2em);
 }
 
 .inputs {
     position: relative;
-    width: var(--size);
-    height: var(--size-s);
     & .trigger {
         position: absolute;
         top: 0;
@@ -21,18 +17,15 @@
         pointer-events: none;
     }
     & .input {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
         cursor: pointer;
     }
 }
 
 :host([orientation=v]) {
-    & > .inputs {
-        width: auto;
+    & .inputs {
         align-self: stretch;
+    }
+    & .input {
+        --size-l: max(var(--size-m), auto);
     }
 }
