--- a/lib/input-button/style.css
+++ b/lib/input-button/style.css
@@ -1,20 +1,22 @@
 @import url('../input-base/style.css');
 
 :host {
-    height: max(var(--i-s), auto);
+    height: max(var(--size-s), auto);
 }
 
 .button {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    padding: 0 8px;
+    padding: 0 var(--size-gap);
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    background: var(--color-2);
     &:active {
-        background: var(--color-active);
+        background: var(--color-5);
+        color: var(--color-2);
     }
 }
 .label {
