--- a/lib/input-range/style.css
+++ b/lib/input-range/style.css
@@ -6,6 +6,7 @@
     position: relative;
     overflow: hidden;
     user-select: none;
+    cursor: ew-resize;
     & * {
         user-select: none;
     }
@@ -19,17 +20,16 @@
     width: calc(100% - var(--thumb-size));
     height: 100%;
     transform: translateX(calc(var(--thumb-size) * 0.5));
-    cursor: ew-resize;
     & .thumb {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        transition: transform 50ms;
-        transform: translateX(clamp(-100%, calc(var(--percent) * 100% - 100%), 0%));
-        /*
-        &::before {
+        transition: var(--trans);
+        transform: translateX(calc(var(--percent) * 100%));
+        &::after {
+            /* thumb bar */
             content: '';
             position: absolute;
             top: 0;
@@ -37,41 +37,20 @@
             display: block;
             width: var(--thumb-size);
             height: 100%;
-            background: var(--thumb-bg);
+            background: var(--color-5);
             transform: translateX(-50%);
-        }
-        */
-        &::after {
-            /* thumb bar */
-            content: '';
-            position: absolute;
-            top: 0;
-            right: 0;
-            display: block;
-            width: var(--thumb-size);
-            height: 100%;
-            background: var(--color-thumb);
-            transform: translateX(50%);
         }
     }
 }
 
 :host([orientation=v]) {
-    transform: rotate(180deg);
+    cursor: ns-resize;
     & .track {
         width: 100%;
         height: calc(100% - var(--thumb-size));
         transform: translateY(calc(var(--thumb-size) * 0.5));
-        cursor: ns-resize; 
         & .thumb {
-            transform: translateY(clamp(-100%, calc(var(--percent) * 100% - 100%), 0%));
-            &::before {
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: var(--thumb-size);
-                transform: translateY(-50%);
-            }
+            transform: translateY(calc(var(--percent) * -100%));
             &::after {
                 top: unset;
                 left: 0;
