--- a/lib/meter-marker/style.css
+++ b/lib/meter-marker/style.css
@@ -70,6 +70,10 @@
         }
     }
 }
+:host([type="knob"][orientation="v"]) {
+    width: 100%;
+    height: 100%;
+}
 
 .meter {
     --meter-trans: rotate(calc(180deg + var(--offset-bg) * 1turn));
